# discogs2pg

./: .travis.yml  LICENSE  README.md  create_tables.sql  discogs2pg.cabal  stack.yaml
sql/: indexes.sql  tables.sql
src/: Main.hs
src-exe/: Main.hs  Options.hs
src/Discogs/: Artist.hs  ArtistRelation.hs  Build.hs  Label.hs  Master.hs  Release.hs  Store.hs  Types.hs
src/Parser/: Artist.hs
src/Store/: Artist.hs
src/Web/Discogs/: Artist.hs  Build.hs  Store.hs
