name:                discogs2pg
version:             0.1.0.0
synopsis:            Parse Discogs XML dumps into postgresql
description:         Please see README.md
homepage:            http://github.com/alvare/discogs2pg
license:             BSD3
license-file:        LICENSE
author:              Ezequiel A. Alvarez
maintainer:          welcometothechango@gmail.com
copyright:           Ezequiel A. Alvarez
category:            XML
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Discogs.Types
                     , Discogs.Store
                     , Discogs.Build
  other-modules:       Discogs.Artist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , hexpat
                     , lens-simple
                     , postgresql-simple
  default-language:    Haskell2010

executable discogs2pg
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , hexpat
                     , discogs2pg
  default-language:    Haskell2010
